# lyric-lang

./: .gitattributes  .gitignore  .lsp.json  CLAUDE.md  CLOSURE_CLASS_SYNTHESIS_DESIGN.md  ECOSYSTEM_SANITY_CHECK_REPORT.md  Makefile  PATTERN_MATCH_BUG_ANALYSIS.md  PHASE2_CLOSURE_SYNTHESIS_FINDINGS.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_NEXT_STEPS.md  README.md  WORKSPACE_MIGRATION.md  blog-post-2-answers.md  lyric.toml  pattern_match_context_test.l  test_pattern_generic.l
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.opencode/: opencode.json
benchmarks/: bench_collections.l  bench_contracts.l  bench_numeric.l  bench_string.l
book/: Makefile  README.md  metadata.yaml  style.css
bootstrap/: .gitignore  Bootstrap.sln  Directory.Build.props
compiler/: Directory.Build.props  Lyric.sln
docs/: 00-overview.md  01-language-reference.md  02-worked-examples.md  03-decision-log.md  04-out-of-scope.md  05-implementation-plan.md  06-open-questions.md  07-references.md  08-contract-semantics.md  09-msil-emission.md  10-bootstrap-progress.md  10-stdlib-plan.md  11-stdlib-examples.md  12-todo-plan.md  13-tutorial.md  14-native-stdlib-plan.md  15-phase-4-proof-plan.md  16-lsp-vscode-plan.md  17-axiom-audit.md  18-jvm-emission.md  19-multi-file-packages.md  20-project-as-dll.md  21-nuget-linking.md  22-distribution-and-tooling.md  23-fsharp-shim-elimination.md  24-build-features.md  24-test-runner-plan.md  25-config-blocks.md  (+41 more)
lyric-rt/: CMakeLists.txt  Makefile
lyric-rt/include/: lyric_rt.h
lyric-rt/src/: lyric_async.c  lyric_collections.c  lyric_fs.c  lyric_posix.c  lyric_process.c  lyric_rt.c  lyric_string.c  lyric_tls.c  lyric_weak.c
lyric-rt/test/: lyric_rt_test.c  lyric_tls_test.c
(+2334 files in other folders)
